@@ -11,6 +11,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - make gpus compatible with NUMA systems, and add the node attribute
       numa_gpu_node_str for an additional way to specify gpus on node boards
   e - Add code to verify the group list as well when VALIDATEGROUPS is set in torque.cfg
+  b - Fix a bug where if geometry requests are enabled and cpusets are enabled, the cpuset
+      wasn't deleted unless a geometry request was made. 
 
 3.0.0
   e - serverdb is now stored as xml, this is no longer configurable.
